FIXED KNOWAGE-3081: Cockpit widget Editor: save() and cancel() buttons not shown on IE11 https://production.eng.it/jira/browse/KNOWAGE-3081

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
@@ -1022,6 +1022,9 @@
         md-content.md-knowage-theme {
             background-color: $listBackground;
         }
+        &>div {
+        	height: 100%;
+        }
     }
 
     .greyListItem {
